Front-end fixes for chatbot interaction pages, bubbles for user and chatbot to improve readability of the conversation and images for chatbotA and B now show

--- a/style.css
+++ b/style.css
@@ -57,6 +57,12 @@ body{
     border: 4px solid #292745;
 }
 
+.sendBtn{
+    font-size: 16px;
+    padding: 0 18px;
+    height: 48px;
+}
+
 /*Styling for the title text*/
 h1.title{
     font-weight: bold;
@@ -110,6 +116,8 @@ p.para{
     overflow: hidden;
     display: flex;
     flex-direction: column;
+    width: 98%;
+    height: 80vh;
 }
 
 /*Header for the "ChatBot A title and image*/
@@ -133,6 +141,7 @@ p.para{
     border:3px solid #292745;
     border-radius: 50%;
     object-fit: contain;
+    object-position: center;
     display: block;
 }
 
@@ -155,19 +164,19 @@ p.para{
 }
 
 /*The text bubbles*/
-.bubbleRow{
+.chatBubbleRow{
     display: flex;
 }
 
-.bubbleRow.left{
+.chatBubbleRow.left{
     justify-content: flex-start;
 }
 
-.bubbleRow.right{
+.chatBubbleRow.right{
     justify-content: flex-end;
 }
 
-.bubble{
+.chatBubble{
     max-width: 55%;
     padding: 14px 16px;
     border: 2px solid #292745;
@@ -178,17 +187,24 @@ p.para{
     position: relative;
 }
 
-.leftBubble{
+.chatBubble.left{
     border-radius: 10px 10px 10px 2px;
 }
 
-.rightBubble{
+.chatBubble.right{
     border-radius: 10px 10px 10px 2px;
+}
+
+.chatMessagesSend{
+    display: flex;
+    gap: 10px;
+    padding: 14px;
 }
 
 .chatMessagesSend input{
     flex: 1;
     height: 48px;
+    width: 100%;
     padding: 0 14px;
     border: 3px solid #292745;
     border-radius: 6px;
